tests/negative/Test19.sp
(* Testing missing double points *)
sample_normal Double(mean:Double");